components/grafana/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  labels:
    app: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: sasya-arogya
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
